# color_battles_bot

./: .gitignore  .replit  README.md  color_bot.py  core  keep_alive.py  loaddump.py  pyproject.toml
cogs/: events.py  gamestart.py  helper.py  informer.py  roleinfo.py  test.py
