[tool.poetry]
name = "colorbattlebot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
dhooks = "^1.1.4"
pymongo = "^3.11.0"
dnspython = "^2.0.0"
discord = "^1.0.1"
"discord.py" = "^1.5.0"
better-profanity = "^0.6.1"
emoji = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
